# wakatime-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
deploy/: Caddyfile  Dockerfile  docker-compose.yml  install-systemd.sh  mcp-wakatime-auth.service.template  mcp-wakatime.service.template  start.sh
src/: server.py  wakatime_client.py
