[project]
name = "wakatime-mcp"
version = "0.1.0"
description = "MCP server for WakaTime coding statistics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "dpshade" },
]
dependencies = [
  "fastmcp>=2.12.0",
  "httpx>=0.27.0",
  "uvicorn>=0.35.0",
]

[project.urls]
Repository = "https://github.com/dpshade/wakatime-mcp"

[tool.uv]
package = false

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
